welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:6: error: value or is not a member of Boolean
  }else if(vacation && (day==0 or day==6)){
                               ^